--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -16,5 +16,12 @@ jobs:
     steps:
       - name: pulling git repo
         uses: actions/checkout@v4
-      - name: say hi to Sid
-        run: echo "Hello Siddharth"
+      - name: Install python version 3.12
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.12'
+      - name: update pip
+        run: python -m pip install --upgrade pip
+      - name: install dependencies
+        run: pip install -r requirements.txt
+
