--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -11,7 +11,7 @@ on:
   #     - "dev"
 
 jobs:
-  job1:
+  build:
     environment:
       name: testing
     env:
@@ -55,27 +55,54 @@ jobs:
           pip install pytest
           pytest
 
-      - name: Login to Docker Hub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKER_HUB_USERNAME }}
-          password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
+      # - name: Login to Docker Hub
+      #   uses: docker/login-action@v3
+      #   with:
+      #     username: ${{ secrets.DOCKER_HUB_USERNAME }}
+      #     password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
 
-      - name: Set up Docker Buildx
-        id: buildx
-        uses: docker/setup-buildx-action@v3
+      # - name: Set up Docker Buildx
+      #   id: buildx
+      #   uses: docker/setup-buildx-action@v3
 
-      - name: Build and push
-        id: docker_build
-        uses: docker/build-push-action@v5
+      # - name: Build and push
+      #   id: docker_build
+      #   uses: docker/build-push-action@v5
+      #   with:
+      #     context: ./
+      #     # context: ./Dockerfile
+      #     file: ./Dockerfile
+      #     builder: ${{steps.buildx.outputs.name}}
+      #     push: true
+      #     tags: ${{secrets.DOCKER_HUB_USERNAME}}/fastapi:latest
+      #     cache-from: type=local,src=/tmp/.buildx-cache
+      #     cache-to: type=local,dest=/tmp/.buildx-cache
+      # - name: Image digest
+      #   run: echo ${{steps.docker_build.outputs.digest}}
+
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: [build]
+    environment:
+      name: production
+    steps:
+      # pull our github repo
+      - name: pulling git repo
+        uses: actions/checkout@v4
+
+      # install heroku CLI
+      # Heroku login
+      # add git remote for heroku
+      # git push heroku main
+      # Above all actions can be done using "https://github.com/marketplace/actions/deploy-to-heroku" marketplace action
+      - name: deploying to Heroku
+        uses: akhileshns/heroku-deploy@v3.13.15 # This is the action
         with:
-          context: ./
-          # context: ./Dockerfile
-          file: ./Dockerfile
-          builder: ${{steps.buildx.outputs.name}}
-          push: true
-          tags: ${{secrets.DOCKER_HUB_USERNAME}}/fastapi:latest
-          cache-from: type=local,src=/tmp/.buildx-cache
-          cache-to: type=local,dest=/tmp/.buildx-cache
-      - name: Image digest
-        run: echo ${{steps.docker_build.outputs.digest}}
+          heroku_api_key: ${{secrets.HEROKU_API_KEY}}
+          heroku_app_name: ${{secrets.HEROKU_APP_NAME}} #Must be unique in Heroku
+          heroku_email: ${{secrets.HEROKU_EMAIL}}
+      
+
+
+        
