--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -88,20 +88,38 @@ jobs:
       name: production
     steps:
       # pull our github repo
-      - name: pulling git repo
-        uses: actions/checkout@v4
+      # - name: pulling git repo
+      #   uses: actions/checkout@v4
 
-      # install heroku CLI
-      # Heroku login
-      # add git remote for heroku
-      # git push heroku main
-      # Above all actions can be done using "https://github.com/marketplace/actions/deploy-to-heroku" marketplace action
-      - name: deploying to Heroku
-        uses: akhileshns/heroku-deploy@v3.13.15 # This is the action
+      # # install heroku CLI
+      # # Heroku login
+      # # add git remote for heroku
+      # # git push heroku main
+      # # Above all actions can be done using "https://github.com/marketplace/actions/deploy-to-heroku" marketplace action
+      # - name: deploying to Heroku
+      #   uses: akhileshns/heroku-deploy@v3.13.15 # This is the action
+      #   with:
+      #     heroku_api_key: ${{secrets.HEROKU_API_KEY}}
+      #     heroku_app_name: ${{secrets.HEROKU_APP_NAME}} #Must be unique in Heroku
+      #     heroku_email: ${{secrets.HEROKU_EMAIL}}
+
+
+      # login to our ubuntu server (login to ssh server)
+      # cd /app/src
+      # git pull
+      # systemctl restart api
+      #  below code requires when we set ubuntu server or VM
+      - name: deploy to ubuntu server
+        uses: appleboy/ssh-action@master
         with:
-          heroku_api_key: ${{secrets.HEROKU_API_KEY}}
-          heroku_app_name: ${{secrets.HEROKU_APP_NAME}} #Must be unique in Heroku
-          heroku_email: ${{secrets.HEROKU_EMAIL}}
+          host: ${{secrets.PROD_HOST}}
+          username: ${{secrets.PROD_USERNAME}}
+          password: ${{secrets.PROD_PASSWORD}}
+          script: |
+            cd app/src
+            git pull
+            echo ${{secrets.PROD_PASSWORD}} | sudo -S systemctl restart api
+
       
 
 
